--- a/contributors.html
+++ b/contributors.html
@@ -27,6 +27,9 @@
         <li>
             Harender
         </li>
+        <li>
+            S NAMAN
+        </li>
         
         <li>
             Yuvraj Chaudhry
